<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_marginTop="100dp"
    android:layout_gravity="center"
    tools:context=".MainActivity">

<!--    Create a new Activity called "LoginActivity".-->
<!--    Design a login page in the activity_login.xml file (be creative and be sure to use material design components).-->
<!--    Connect the LoginActivity to the ListView in the LoginActivity.kt file using intents (so when a user clicks the login/sign in button the screen goes to the ListView screen).-->
<!--    Run the app to make sure it works in an emulator or actual device.-->
<!--    Push your code to github.-->
<!--    Submit link to the project on github.-->

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:src="@drawable/liveevent"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/shr_hint_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_toStartOf="@id/next_button"
        android:layout_toLeftOf="@id/next_button"
        android:layout_marginTop="40dp"
        android:text="@string/shr_button_cancel" />
    </RelativeLayout>
<com.google.android.material.textview.MaterialTextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:text="@string/log_info_email_is_accesslistview_gmail_com_password_1234"/>

</LinearLayout>